--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -22,8 +22,8 @@
  \section{Introduction} 
  \label{sec:intro}
 
-
-
+ The topic I have chosen to write about is whether or not music therapy has a positive impact on individuals with depression. Depression is a mood disorder that consists of persistent low mood, loss of interest, and a loss of pleasure (4). A lot of people in my life have struggled with depression, including both of my grandmothers. Finding new ways to help people struggling with mental illness is always exciting because the therapies or medications that they currently use might not be working, and knowing there is another option out there for them brings hope. Depression affects more than 300 million people worldwide and is a large cause of death due to it being closely related to suicide (1). There have been studies done comparing music therapy to traditional methods of treating depression, like psychological, pharmacological, and other therapies (4) as well as seeing how traditional methods work hand in hand with music therapy (6).
+ 
  \section{Specific Aims}
  \label{sec:aims}
 
