--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -23,11 +23,11 @@
  \label{sec:intro}
 
  The topic I have chosen to write about is whether or not music therapy has a positive impact on individuals with depression. Depression is a mood disorder that consists of persistent low mood, loss of interest, and a loss of pleasure (4). A lot of people in my life have struggled with depression, including both of my grandmothers. Finding new ways to help people struggling with mental illness is always exciting because the therapies or medications that they currently use might not be working, and knowing there is another option out there for them brings hope. Depression affects more than 300 million people worldwide and is a large cause of death due to it being closely related to suicide (1). There have been studies done comparing music therapy to traditional methods of treating depression, like psychological, pharmacological, and other therapies (4) as well as seeing how traditional methods work hand in hand with music therapy (6).
- 
+
  \section{Specific Aims}
  \label{sec:aims}
 
- 
+ The research question that I would like to answer is: does music therapy have a positive effect on patients with depression? This is an important aspect to look at since there are a lot of studies done looking at the effects of music therapy along with traditional therapies (6), comparing music therapy vs other therapies (4), and looking at many different mental disorders, but I think it is important to look at just the effects of music therapy and focusing in on the positive of negative impacts it has on depression. I also want to take a look at all the different variables and compare which ones go hand in hand with making the music therapy more effective or less effective, such as length and frequency of therapies. Narrowing down the most effective way to implement music therapy will help it be more effective for those trying to use it in the future.
 
  \section{Data Description}
  \label{sec:data}
