--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -32,7 +32,8 @@
  \section{Data Description}
  \label{sec:data}
 
- 
+ I will be using the data from PubMed Central, from a study called “Effects of Music Therapy on Depression: A Meta-Analysis of Randomized Controlled Trials” (1). There were 55 controlled trials done, and they are all compiled into one large document. I want to specifically focus on the number of weeks spent going to therapies, and the length of time spent per session (minutes) and how those variables affect depression levels among individuals.
+
 
  \section{Research Design}
  \label{sec:research}
