--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -38,7 +38,7 @@
  \section{Research Design}
  \label{sec:research}
 
- 
+ I want to run a random effects model in SAS to see how music therapy affects the level of depression that the patient has. I would like to make a scatterplot showing how the frequency of music therapy affects the mental wellbeing of the patient, as well as take a look at some of the other variables and compare them directly to see if there is a correlation between them, such as location of therapy vs improvement in depression, or length of each session vs improvement in depression. These plots and tests will help determine whether or not music therapy actually has a benefit for those with depression, because we will be able to see whether or not the therapies are correlated with depression symptoms going down.
 
  \section{Discussion}
  \label{sec:disc}
