--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -43,6 +43,7 @@
  \section{Discussion}
  \label{sec:disc}
 
+ I am expecting to find that music therapy has a positive effect on patients with depression. Music is an outlet for so many people and can really articulate specific feelings, especially depending on the genre (2). It can definitely have an impact on someone’s mental health as well. There is already a lot of research out there on this topic, but besides looking at just the statistics of whether or not it works, I am interested in seeing how many locations are implementing music therapy as valid treatment plans for those with depression. If it is found that it is not commonly used but is effective, it would be interesting to see how more music therapy could be implemented. Implementing more music therapy and marketing it to patients with depression could have a positive effect on the mental health of people struggling now and also in the future. If the research does not go as expected, it would just mean that patients would have to resort to the other methods of treating depression, such as psychological therapies, pharmacological therapies, medication, etc (4).
 
  \section{Conclusion}
  \label{sec:con}
