--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -48,6 +48,7 @@
  \section{Conclusion}
  \label{sec:con}
  
+ I will be researching the effect that music therapy has on individuals with depression. I will focus on the number of weeks spent in music therapy sessions, as well as the length of each session, and whether or not these sessions cause symptoms of depression to lessen and mental wellbeing to get better for the individuals. Depression affects so many people worldwide, and narrowing down what specifics help in terms of music therapy will allow people with depression to make informed decisions on future therapies.
 
  \bibliography{prop_cit}
  \bibliographystyle{chicago}
