--- a/Proposal/prop_cit.bib
+++ b/Proposal/prop_cit.bib
@@ -3,7 +3,7 @@
   author={Tang, Qishou and Huang, Zhaohui and Zhou, Huang and Ye, Peijie},
   journal={PLOS},
   year={2020},
-  publisher={National Library of Medicine}
+  publisher={National Library of Medicine},
   URL={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7673528/#sec021}
 }
 
@@ -13,7 +13,7 @@
   author={Dingle, Genevieve A. and Sharman, Leah S. and Bauer, Zoe and Beckman, Emma and Broughton, Mary and Bunzli, Emma and Davidson, Robert and Draper, Grace and Fairley, Sheranne and Farrell, Callyn and Flynn, Libby Maree and Gomersall, Sjaan and Hong, Mengxun and Larwood, Joel and Lee, Chiying and Lee, Jennifer and Nitschinsk, Lewis and Peluso, Natalie and Reedman, Sarah Elizabeth and Vidas, Dianna and Walter, Zoe C. and Wright, Olivia Renee Louise},
   journal={Frontiers in Psychology},
   year={2021},
-  publisher={National Library of Medicine}
+  publisher={National Library of Medicine},
   URL={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8455907/}
 }
 
@@ -36,11 +36,11 @@
   title = {Individual music therapy for depression: randomised controlled trial},
   journal = {British Journal of Psychiatry},
   number = {2},
-  volume={199}
+  volume={199},
   year = {2011},
   publisher = {Cambridge University Press},
-  DOI={10.1192/bjp.bp.110.085431}
-  pages={132–139}
+  DOI={10.1192/bjp.bp.110.085431},
+  pages={132–139},
   URL = {https://www.cambridge.org/core/journals/the-british-journal-of-psychiatry/article/individual-music-therapy-for-depression-randomised-controlled-trial/A1CD72904929CECCB956F4F3B09605AF}
 }
 
