--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -6,6 +6,7 @@
  \usepackage{natbib}
  \usepackage{float}
  \usepackage[colorlinks=true, citecolor=blue]{hyperref}
+ \usepackage{bookmark}
 
 
 
@@ -22,17 +23,17 @@
  \section{Introduction} 
  \label{sec:intro}
 
- The topic I have chosen to write about is whether or not music therapy has a positive impact on individuals with depression. Depression is a mood disorder that consists of persistent low mood, loss of interest, and a loss of pleasure \citet{Cochrane}. A lot of people in my life have struggled with depression, including both of my grandmothers. Finding new ways to help people struggling with mental illness is always exciting because the therapies or medications that they currently use might not be working, and knowing there is another option out there for them brings hope. Depression affects more than 300 million people worldwide and is a large cause of death due to it being closely related to suicide \citet{PLOS}. There have been studies done comparing music therapy to traditional methods of treating depression, like psychological, pharmacological, and other therapies \citet{Cochrane} as well as seeing how traditional methods work hand in hand with music therapy \citet{British}.
+ The topic I have chosen to write about is whether or not music therapy has a positive impact on individuals with depression. Depression is a mood disorder that consists of persistent low mood, loss of interest, and a loss of pleasure \cite{Cochrane}. A lot of people in my life have struggled with depression, including both of my grandmothers. Finding new ways to help people struggling with mental illness is always exciting because the therapies or medications that they currently use might not be working, and knowing there is another option out there for them brings hope. Depression affects more than 300 million people worldwide and is a large cause of death due to it being closely related to suicide \cite{PLOS}. There have been studies done comparing music therapy to traditional methods of treating depression, like psychological, pharmacological, and other therapies \cite{Cochrane} as well as seeing how traditional methods work hand in hand with music therapy \cite{British}.
 
  \section{Specific Aims}
  \label{sec:aims}
 
- The research question that I would like to answer is: does music therapy have a positive effect on patients with depression? This is an important aspect to look at since there are a lot of studies done looking at the effects of music therapy along with traditional therapies \citet{British}, comparing music therapy vs other therapies \citet{Cochrane}, and looking at many different mental disorders, but I think it is important to look at just the effects of music therapy and focusing in on the positive of negative impacts it has on depression. I also want to take a look at all the different variables and compare which ones go hand in hand with making the music therapy more effective or less effective, such as length and frequency of therapies. Narrowing down the most effective way to implement music therapy will help it be more effective for those trying to use it in the future.
+ The research question that I would like to answer is: does music therapy have a positive effect on patients with depression? This is an important aspect to look at since there are a lot of studies done looking at the effects of music therapy along with traditional therapies \cite{British}, comparing music therapy vs other therapies \cite{Cochrane}, and looking at many different mental disorders, but I think it is important to look at just the effects of music therapy and focusing in on the positive of negative impacts it has on depression. I also want to take a look at all the different variables and compare which ones go hand in hand with making the music therapy more effective or less effective, such as length and frequency of therapies. Narrowing down the most effective way to implement music therapy will help it be more effective for those trying to use it in the future.
 
  \section{Data Description}
  \label{sec:data}
 
- I will be using the data from PubMed Central, from a study called “Effects of Music Therapy on Depression: A Meta-Analysis of Randomized Controlled Trials” \citet{PLOS}. There were 55 controlled trials done, and they are all compiled into one large document. I want to specifically focus on the number of weeks spent going to therapies, and the length of time spent per session (minutes) and how those variables affect depression levels among individuals.
+ I will be using the data from PubMed Central, from a study called “Effects of Music Therapy on Depression: A Meta-Analysis of Randomized Controlled Trials” \cite{PLOS}. There were 55 controlled trials done, and they are all compiled into one large document. I want to specifically focus on the number of weeks spent going to therapies, and the length of time spent per session (minutes) and how those variables affect depression levels among individuals.
 
 
  \section{Research Design}
@@ -43,14 +44,15 @@
  \section{Discussion}
  \label{sec:disc}
 
- I am expecting to find that music therapy has a positive effect on patients with depression. Music is an outlet for so many people and can really articulate specific feelings, especially depending on the genre \citet{Frontiers}. It can definitely have an impact on someone’s mental health as well. There is already a lot of research out there on this topic, but besides looking at just the statistics of whether or not it works, I am interested in seeing how many locations are implementing music therapy as valid treatment plans for those with depression. If it is found that it is not commonly used but is effective, it would be interesting to see how more music therapy could be implemented. Implementing more music therapy and marketing it to patients with depression could have a positive effect on the mental health of people struggling now and also in the future. If the research does not go as expected, it would just mean that patients would have to resort to the other methods of treating depression, such as psychological therapies, pharmacological therapies, medication, etc \citet{Cochrane}.
+ I am expecting to find that music therapy has a positive effect on patients with depression. Music is an outlet for so many people and can really articulate specific feelings, especially depending on the genre \cite{Frontiers}. It can definitely have an impact on someone’s mental health as well. There is already a lot of research out there on this topic, but besides looking at just the statistics of whether or not it works, I am interested in seeing how many locations are implementing music therapy as valid treatment plans for those with depression. If it is found that it is not commonly used but is effective, it would be interesting to see how more music therapy could be implemented. Implementing more music therapy and marketing it to patients with depression could have a positive effect on the mental health of people struggling now and also in the future. If the research does not go as expected, it would just mean that patients would have to resort to the other methods of treating depression, such as psychological therapies, pharmacological therapies, medication, etc \cite{Cochrane}.
 
  \section{Conclusion}
  \label{sec:con}
  
  I will be researching the effect that music therapy has on individuals with depression. I will focus on the number of weeks spent in music therapy sessions, as well as the length of each session, and whether or not these sessions cause symptoms of depression to lessen and mental wellbeing to get better for the individuals. Depression affects so many people worldwide, and narrowing down what specifics help in terms of music therapy will allow people with depression to make informed decisions on future therapies.
 
- \bibliography{prop_cit}
  \bibliographystyle{chicago}
+ \bibliography{prop_cit}{}
+
 
 \end{document}
