--- a/Proposal/prop_cit.bib
+++ b/Proposal/prop_cit.bib
@@ -19,7 +19,7 @@
 
 
 @article{Cochrane,
-  author = {Aalbers, S, Fusar‐Poli, L, Freeman, RE, Spreen, M, Ket, JCF, Vink, AC, Maratos, A, Crawford, M, Chen, XJ, and Gold, C},
+  author = {Aalbers, Sonja and Fusar‐Poli, Laura and Freeman, Ruth E. and Spreen, Marinus and Ket, Johannes CF. and Vink, Annemiek C. and Maratos, Anna and Crawford, Mike and Chen, Xi-Jing and and Gold, Christian},
   title = {Music therapy for depression},
   journal = {Cochrane Database of Systematic Reviews},
   number = {11},
