--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -20,11 +20,24 @@
  \maketitle
 
 
+ \section{Absract} 
+ \label{sec:abstract}
+
+
  \section{Introduction} 
  \label{sec:intro}
 
 
+ \section{Data} 
+ \label{sec:data}
 
+
+ \section{Application} 
+ \label{sec:app}
+
+
+ \section{Discussion} 
+ \label{sec:disc}
 
 
 
