title and bibliography

--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -12,7 +12,7 @@
 
  %% meta data
 
- \title{TITLE}
+ \title{How Different Variables Affect Depression Scores in Individuals, and Which Set of Variables Provide the Best Outcomes}
  \author{Olivia Dybinski\\}
  \date{November 2022}
 
