--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -25,6 +25,11 @@
 
  This paper will take a look at various variables and see how they affect the percent change of depression scores from before therapy and after therapy. Depression affects millions worldwide, and taking a look at which specific parameters allow for music therapy to be the most beneficial can help guide individuals in the right direction when looking to improve their depression. Some variables considered were individual vs group therapy, total time in therapy, age of participants, and active vs receptive therapy.
 
+ \section{Keywords}
+ \label{sec:key}
+
+ active music therapy, depression, group music therapy, individual music therapy, instruments, music therapy, receptive music therapy, singing
+
  \section{Introduction} 
  \label{sec:intro}
 
