--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -33,6 +33,13 @@
  \section{Introduction} 
  \label{sec:intro}
 
+ Depression affects more than 300 million people worldwide and is a large cause of death due to it being closely related to suicide \citet{PLOS}. Depression is defined as a mood disorder that consists of persistent low mood, loss of interest, and a loss of pleasure \citet{Cochrane}. It is the second leading cause of death with almost 800,000 people dying of depression every year worldwide \citet{PLOS}. 
+
+ There are countless methods out there to try to keep depression at bay, like different kinds of drugs, different kinds of therapy, and other programs. Sometimes it can be difficult for those without access to some of these methods to be treated for depression, so it is important to have treatments available that do not involve prescription medications or therapists. Music is something that has been passed down for generations, and is more readily accessible than other methods of treating depression, which is why there is a lot of research going into this topic. There have been many other studies done on music therapy. Some include comparing music therapy to traditional methods of treating depression, like psychological, pharmacological, and other therapies \citet{Cochrane}, studies looking at how traditional methods work hand in hand with music therapy \citet{British}, and studies analyzing how music therapy affects a variety of psychosocial practices like arousal, mood, social connection, as well as many others \citet{Frontiers}. All of these studies focus on how music therapy works hand in hand with other therapies or how they affect specific parts of someone, but this analysis focuses on whether or not different variables affect depression in a positive or negative way, and which variables yield the best results. 
+
+ Specifically, the data collected had various variables about the study taken note of, such as if the therapy was individual or group, active or receptive, the average age of participants and how much time was spent total in therapy throughout the sessions. Finding out which variables are more likely to yield better results will aid in figuring out treatment options and treatment plans for people looking to work their depression.
+
+ Section \ref{sec:data} will provide details about the data, and then section \ref{sec:application} will provide all the outputs and explanations for what it all means in terms of depression score. Finally, section \ref{sec:discussion} will provide some closing statements, and how this research could be improved even further. The references are listed at the very end.
 
  \section{Data} 
  \label{sec:data}
