--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -44,6 +44,17 @@
  \section{Data} 
  \label{sec:data}
 
+ The data used was collected from several different studies and compiled together in order to form a more cohesive understanding of whether music therapy affects people or not. It is part of an article called: “Effects of Music Therapy on Depression: A Meta-Analysis of Random Controlled Trials” in the National Library of Medicine \citet{PLOS}. 
+
+ The control group in each of these studies was not receiving any sort of music therapy, but the test group was. These were all randomized controlled trials, and a depression scale was used for each one. Each study did not follow the same scale, but the depression scores before vs after are proportional to one another. 
+ 
+ There were two authors that searched through possible papers to find data that met all the criteria to then be compiled into a master document. Since there is data from so many different studies, the data this paper will utilize is an average of the participants in that specific study. So the depression score before and the depression scores after are the averages for the all of the people that participated in that one study. 
+ 
+ There were a couple of specifics that the two authors were looking for when searching for eligible papers and data to compile. They looked for characteristics of the paper, characteristics of the participants, the study design, the music therapy process, and the outcome measures. There are a lot of specifics under those branches that they had in their large data set, but I narrowed it down to the ones that I wanted to focus on, which were the type of music therapy (individual or group), the total number of minutes spent in music therapy over the course of the study/treatment, whether the music therapy was active or receptive, the mean age of the participants, and the depression score before and after treatment. 
+ 
+ They ultimately ended up with 55 studies, 24 of them had the relevant information I was looking for.  Some of the studies did not take note of some of the variables that I wanted to look at, so they were not included. These are some of the variables focused on here: Individual therapy meant they were participating in therapy by themselves rather than with a group. Active therapy means that the individual was actively doing something for their music therapy, which can look like playing an instrument or singing. Receptive therapy is when someone is just absorbing whatever is put in front of them, such as listening to music and lyric analysis. 
+ 
+ The research question I chose to look at is: how do different variables affect how effective music therapy is for individuals with depression, and does music therapy have an overall positive effect on depression? This data set gives me a lot of different variables to look at and compare to the depression scores given. Since there is a test group as well as a control group, I can compare the depression scores before and after for both groups, and see whether the music therapy was actually effective or if the depression score just naturally went down with time.
 
  \section{Application} 
  \label{sec:app}
