--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -26,12 +26,12 @@
  This paper will take a look at various variables and see how they affect the percent change of depression scores from before therapy and after therapy. Depression affects millions worldwide, and taking a look at which specific parameters allow for music therapy to be the most beneficial can help guide individuals in the right direction when looking to improve their depression. Some variables considered were individual vs group therapy, total time in therapy, age of participants, and active vs receptive therapy.
 
  \section{Keywords}
- \label{sec:key}
+ \label{sec:keywords}
 
  active music therapy, depression, group music therapy, individual music therapy, instruments, music therapy, receptive music therapy, singing
 
  \section{Introduction} 
- \label{sec:intro}
+ \label{sec:introduction}
 
  Depression affects more than 300 million people worldwide and is a large cause of death due to it being closely related to suicide \citet{PLOS}. Depression is defined as a mood disorder that consists of persistent low mood, loss of interest, and a loss of pleasure \citet{Cochrane}. It is the second leading cause of death with almost 800,000 people dying of depression every year worldwide \citet{PLOS}. 
 
@@ -57,11 +57,85 @@
  The research question I chose to look at is: how do different variables affect how effective music therapy is for individuals with depression, and does music therapy have an overall positive effect on depression? This data set gives me a lot of different variables to look at and compare to the depression scores given. Since there is a test group as well as a control group, I can compare the depression scores before and after for both groups, and see whether the music therapy was actually effective or if the depression score just naturally went down with time.
 
  \section{Application} 
- \label{sec:app}
+ \label{sec:application}
 
+ \begin{table}[tbp]
+    \small
+    \caption{Test Group Data}
+    \label{tab:rv}
+  \centering
+  \begin{tabular}{rrr}
+      \toprule
+  Depression Score (Before) & Depression Score (After) & Percent Change of Depression Score \\ 
+    \midrule
+     5.05 & 3.6 & 28.71\\ 
+     8 & 5.2 & 35\\ 
+     13.1 & 7.9 & 39.69\\ 
+     4.1 & 2.1 & 48.78\\ 
+     4.17 & 1.38 & 66.91\\ 
+     15.52 & 9.82 & 36.73\\  
+     5.1 & 3.7 & 27.45\\
+     13.34 & 2.81 & 78.94\\
+     20.6 & 15.03 & 27.04\\
+     12.333 & 11.867 & 3.78\\
+     17.39 & 8.22 & 52.73\\
+     24.6 & 14.1 & 42.68\\
+     5.1 & 2.5 & 50.98\\
+     8.13 & 7.16 & 11.93\\
+     16.7 & 8.9 & 46.71\\
+     17.3 & 7.7 & 55.49\\
+     4.2 & 3.9 & 7.14\\
+     15.84 & 13.31 & 15.97\\
+     14.68 & 12.23 & 16.69\\
+     15.7 & 6.3 & 59.87\\
+     20.77 & 15.22 & 26.72\\
+     8 & 7.2 & 10\\
+     7.93 & 7.4 & 6.68\\
+     25.22 & 20.78 & 17.61\\
+     \bottomrule
+  \end{tabular}
+  \end{table}
+  
+  
+  \begin{table}[tbp]
+    \small
+    \caption{Control Group Data}
+    \label{tab:rv}
+  \centering
+  \begin{tabular}{rrr}
+      \toprule
+  Depression Score (Before) & Depression Score (After) & Percent Change of Depression Score \\ 
+    \midrule
+     4.92 & 4.84 & 1.63\\ 
+     8 & 6.5 & 18.75\\ 
+     13.4 & 15.8 & -17.91\\ 
+     1.8 & 2 & -11.11\\ 
+     4.23 & 4.15 & 1.89\\ 
+     15.03 & 15.53 & -3.33\\  
+     7.1 & 5.6 & 21.13\\
+     11 & 8.85 & 19.55\\
+     20.43 & 21.47 & -5.09\\
+     13.353 & 14.559 & -9.03\\
+     15.7 & 13.78 & 12.23\\
+     23 & 16.43 & 28.57\\
+     7.5 & 6 & 20\\
+     8.5 & 9.13 & -7.41\\
+     11.8 & 11.2 & 5.08\\
+     15.3 & 16.2 & -5.88\\
+     3.7 & 3.4 & 8.11\\
+     15.75 & 15.65 & 0.63\\
+     12.73 & 13.04 & -2.44\\
+     16 & 10.2 & 36.25\\
+     19.56 & 18.05 & 8.14\\
+     7.8 & 8.3 & -6.41\\
+     10.14 & 8.5 & 16.17\\
+     21.13 & 19.31 & 8.61\\
+     \bottomrule
+  \end{tabular}
+  \end{table}
 
  \section{Discussion} 
- \label{sec:disc}
+ \label{sec:discussion}
 
 
 
