--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -137,7 +137,9 @@
  \section{Discussion} 
  \label{sec:discussion}
 
+ CHART 1
 
+ The data collected for the depression scores before the therapy started, vs after the therapy started were not in the same scale for each of the studies, as shown in Table 1. Therefore, it did not make sense to compare the difference in scores, or look at the scores directly, because there would most likely be no correlation, since the values range from pretty high to pretty low. Regardless, the percent change looks at the first value of the depression score, the second value of the depression score, and sees by what percentage the score got better or worse. The higher the percent change, the more effective therapy was because the depression score got lower by that percentage. Therefore, a negative percent change means that the depression score after therapy was higher than the depression score before therapy, which means that as time passed the depression got worse. Looking at this graph, the percent change for the test group is higher than the control group in almost every single study, excluding studies 17 and 23. This shows that music therapy was more effective in decreasing depression levels than not having music therapy.
 
 
  \bibliographystyle{chicago}
