--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -134,9 +134,19 @@
   \end{tabular}
   \end{table}
 
-  CHART 1
+ CHART 1
 
-The data collected for the depression scores before the therapy started, vs after the therapy started were not in the same scale for each of the studies, as shown in Table 1. Therefore, it did not make sense to compare the difference in scores, or look at the scores directly, because there would most likely be no correlation, since the values range from pretty high to pretty low. Regardless, the percent change looks at the first value of the depression score, the second value of the depression score, and sees by what percentage the score got better or worse. The higher the percent change, the more effective therapy was because the depression score got lower by that percentage. Therefore, a negative percent change means that the depression score after therapy was higher than the depression score before therapy, which means that as time passed the depression got worse. Looking at this graph, the percent change for the test group is higher than the control group in almost every single study, excluding studies 17 and 23. This shows that music therapy was more effective in decreasing depression levels than not having music therapy.
+ The data collected for the depression scores before the therapy started, vs after the therapy started were not in the same scale for each of the studies, as shown in Table 1. Therefore, it did not make sense to compare the difference in scores, or look at the scores directly, because there would most likely be no correlation, since the values range from pretty high to pretty low. Regardless, the percent change looks at the first value of the depression score, the second value of the depression score, and sees by what percentage the score got better or worse. The higher the percent change, the more effective therapy was because the depression score got lower by that percentage. Therefore, a negative percent change means that the depression score after therapy was higher than the depression score before therapy, which means that as time passed the depression got worse. Looking at this graph, the percent change for the test group is higher than the control group in almost every single study, excluding studies 17 and 23. This shows that music therapy was more effective in decreasing depression levels than not having music therapy.
+
+ CHART 2
+
+ One of the goals with using this data was to compare how different variables affect the depression score, and what set of conditions are the best for making sure that music therapy is most effective. Looking at the first two variables: individual versus group therapy. Individual therapy meant that the patient was participating in the music therapy by themselves, and group therapy meant they were in a group setting participating in the music therapy. The average of the percent change for individual therapy was 36.88\%, which is higher than for group therapy (30.97\%), which means that individual music therapy was more effective in bringing the depression score down than group therapy was. 
+ 
+ The next set of variables was the amount of time that the individual spent total in therapy, and I split the data into two groups, one being >500 minutes and the other being <500 minutes. I was shocked to see that the set of studies with therapy lasting <500 min had a higher average percent change (39.10\%) in depression score than total therapy time being >500 min (26.10\%), because it means that more time participating in something does not always yield better results. 
+ 
+ The next variable was whether the individual was active or receptive in their therapy. Active music therapy could include playing instruments, singing, and receptive music therapy could include lyric analysis and listening to music. The graph shows that participating in receptive therapy was more beneficial, as the percent change in depression (37.81\%) was higher  for this group vs the active therapy group (31.15\%). 
+ 
+ The last factor that I looked at was the age of the participants. The patients who were older than 65 (>65) were more receptive to the music therapy than those younger than 65 (>65), as their percent change in depression score is higher (40.67\% vs 27.19\%). Many people think that once an older adult has an issue, it is harder to treat it, but this study just shows that this specific kind of therapy works best on older individuals.
 
  \section{Discussion} 
  \label{sec:discussion}
