--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -148,6 +148,10 @@
  
  The last factor that I looked at was the age of the participants. The patients who were older than 65 (>65) were more receptive to the music therapy than those younger than 65 (>65), as their percent change in depression score is higher (40.67\% vs 27.19\%). Many people think that once an older adult has an issue, it is harder to treat it, but this study just shows that this specific kind of therapy works best on older individuals.
 
+ CHART 3
+
+ This graph shows the correlation between the total amount of time spent in music therapy and the percent decrease in depression score. There was only one study that had more than 2000 minutes of total time in therapy, which kind of skews the graph. Most of the studies had between 100 and 1000 minutes, and it looks like between 0 and 500 minutes is the ideal amount of time to spend in music therapy in order to see results because the percent change (decrease) in depression scores were highest with that time frame. The more time spent total though, the less intense the percent change was, meaning the depression score did not change as drastically. 
+
  \section{Discussion} 
  \label{sec:discussion}
 
