--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -155,7 +155,7 @@
  \section{Discussion} 
  \label{sec:discussion}
 
-
+ This study allows for individuals looking to see if music therapy is an option for them, which criteria they should aim for in order to have the best outcome. There are obviously more factors that come into play than just the couple that were focused on here, but it is a good starting point. There could be more studies done in the future with even more variables taken into consideration, in order to find the absolute best way to participate in music therapy.
 
 
  \bibliographystyle{chicago}
