--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -146,7 +146,7 @@
  
  The next variable was whether the individual was active or receptive in their therapy. Active music therapy could include playing instruments, singing, and receptive music therapy could include lyric analysis and listening to music. The graph shows that participating in receptive therapy was more beneficial, as the percent change in depression (37.81\%) was higher  for this group vs the active therapy group (31.15\%). 
  
- The last factor that I looked at was the age of the participants. The patients who were older than 65 (>65) were more receptive to the music therapy than those younger than 65 $(<65)$, as their percent change in depression score is higher (40.67\% vs 27.19\%). Many people think that once an older adult has an issue, it is harder to treat it, but this study just shows that this specific kind of therapy works best on older individuals.
+ The last factor that I looked at was the age of the participants. The patients who were older than 65 $(>65)$ were more receptive to the music therapy than those younger than 65 $(<65)$, as their percent change in depression score is higher (40.67\% vs 27.19\%). Many people think that once an older adult has an issue, it is harder to treat it, but this study just shows that this specific kind of therapy works best on older individuals.
 
  CHART 3
 
