--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -2,12 +2,14 @@
 
  %% preamble
  \usepackage[utf8]{inputenc}
+ \usepackage{amsmath}
+ \usepackage{graphicx}
  \usepackage{booktabs}
  \usepackage{natbib}
  \usepackage{float}
+ \usepackage[margin = 1in]{geometry}
  \usepackage[colorlinks=true, citecolor=blue]{hyperref}
  \usepackage{bookmark}
-
 
 
  %% meta data
