--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -7,7 +7,6 @@
  \usepackage{booktabs}
  \usepackage{natbib}
  \usepackage{float}
- \usepackage[margin = 1in]{geometry}
  \usepackage[colorlinks=true, citecolor=blue]{hyperref}
  \usepackage{bookmark}
 
@@ -41,7 +40,7 @@
 
  Specifically, the data collected had various variables about the study taken note of, such as if the therapy was individual or group, active or receptive, the average age of participants and how much time was spent total in therapy throughout the sessions. Finding out which variables are more likely to yield better results will aid in figuring out treatment options and treatment plans for people looking to work their depression.
 
- Section \ref{sec:data} will provide details about the data, and then section \ref{sec:application} will provide all the outputs and explanations for what it all means in terms of depression score. Finally, section \ref{sec:discussion} will provide some closing statements, and how this research could be improved even further. The references are listed at the very end.
+ Section \ref{data} will provide details about the data, and then section \ref{application} will provide all the outputs and explanations for what it all means in terms of depression score. Finally, section \ref{discussion} will provide some closing statements, and how this research could be improved even further. The references are listed at the very end.
 
  \section{Data} 
  \label{sec:data}
@@ -138,7 +137,7 @@
 
   \begin{figure}[h!]
     \centering
-    \includegraphics[width=10 cm]{CHART1.png}
+    \includegraphics[width=12 cm]{CHART1.png}
     \label{fig:chart1}
   \end{figure}
 
@@ -146,7 +145,7 @@
 
  \begin{figure}[h!]
   \centering
-  \includegraphics[width=10 cm]{CHART2.png}
+  \includegraphics[width=12 cm]{CHART2.png}
   \label{fig:chart2}
 \end{figure}
 
@@ -160,7 +159,7 @@
 
  \begin{figure}[h!]
   \centering
-  \includegraphics[width=10 cm]{CHART3.png}
+  \includegraphics[width=12 cm]{CHART3.png}
   \label{fig:chart3}
 \end{figure}
 
