--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -60,7 +60,7 @@
  \section{Application} 
  \label{sec:application}
 
- \begin{table}[tbp]
+ \begin{table}[hbt!]
     \small
     \caption{Test Group Data}
     \label{tab:1}
@@ -98,7 +98,7 @@
   \end{table}
   
   
-  \begin{table}[tbp]
+  \begin{table}[hbt!]
     \small
     \caption{Control Group Data}
     \label{tab:2}
@@ -135,7 +135,7 @@
   \end{tabular}
   \end{table}
 
-  \begin{figure}[h!]
+  \begin{figure}[hbt!]
     \centering
     \includegraphics[width=12 cm]{CHART1.png}
     \label{fig:chart1}
@@ -143,7 +143,7 @@
 
  The data collected for the depression scores before the therapy started, vs after the therapy started were not in the same scale for each of the studies, as shown in Table 1. Therefore, it did not make sense to compare the difference in scores, or look at the scores directly, because there would most likely be no correlation, since the values range from pretty high to pretty low. Regardless, the percent change looks at the first value of the depression score, the second value of the depression score, and sees by what percentage the score got better or worse. The higher the percent change, the more effective therapy was because the depression score got lower by that percentage. Therefore, a negative percent change means that the depression score after therapy was higher than the depression score before therapy, which means that as time passed the depression got worse. Looking at this graph, the percent change for the test group is higher than the control group in almost every single study, excluding studies 17 and 23. This shows that music therapy was more effective in decreasing depression levels than not having music therapy.
 
- \begin{figure}[h!]
+ \begin{figure}[hbt!]
   \centering
   \includegraphics[width=12 cm]{CHART2.png}
   \label{fig:chart2}
@@ -157,7 +157,7 @@
  
  The last factor that I looked at was the age of the participants. The patients who were older than 65 $(>65)$ were more receptive to the music therapy than those younger than 65 $(<65)$, as their percent change in depression score is higher (40.67\% vs 27.19\%). Many people think that once an older adult has an issue, it is harder to treat it, but this study just shows that this specific kind of therapy works best on older individuals.
 
- \begin{figure}[h!]
+ \begin{figure}[hbt!]
   \centering
   \includegraphics[width=12 cm]{CHART3.png}
   \label{fig:chart3}
