--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -151,7 +151,7 @@
 
  One of the goals with using this data was to compare how different variables affect the depression score, and what set of conditions are the best for making sure that music therapy is most effective. Looking at the first two variables: individual versus group therapy. Individual therapy meant that the patient was participating in the music therapy by themselves, and group therapy meant they were in a group setting participating in the music therapy. The average of the percent change for individual therapy was 36.88\%, which is higher than for group therapy (30.97\%), which means that individual music therapy was more effective in bringing the depression score down than group therapy was. 
  
- The next set of variables was the amount of time that the individual spent total in therapy, and I split the data into two groups, one being >500 minutes and the other being <500 minutes. I was shocked to see that the set of studies with therapy lasting <500 min had a higher average percent change (39.10\%) in depression score than total therapy time being >500 min (26.10\%), because it means that more time participating in something does not always yield better results. 
+ The next set of variables was the amount of time that the individual spent total in therapy, and I split the data into two groups, one being $>500$ minutes and the other being $<500$ minutes. I was shocked to see that the set of studies with therapy lasting <500 min had a higher average percent change (39.10\%) in depression score than total therapy time being >500 min (26.10\%), because it means that more time participating in something does not always yield better results. 
  
  The next variable was whether the individual was active or receptive in their therapy. Active music therapy could include playing instruments, singing, and receptive music therapy could include lyric analysis and listening to music. The graph shows that participating in receptive therapy was more beneficial, as the percent change in depression (37.81\%) was higher  for this group vs the active therapy group (31.15\%). 
  
